# klein.buch-public

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-lock.yaml  sandbox-write-test.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  ds-preview.html  operations-guide.md  release-signing-guide.md  user-guide.md
docs/adr/: 0001-cross-os-sidecar-bundles-in-block-17.md  0002-app-shell-tauri-rust.md  0003-sqlite-strict-cents-uuidv7.md  0004-functional-core-imperative-shell.md  0005-paragraph-19-kleinunternehmer-hardline.md  0006-gobd-immutability-storno.md  0007-einvoice-cii-not-ubl-kosit.md  0008-pdf-typst-zugferd-mustang-sidecar.md  0009-backup-first-class-encryption.md  0010-euer-cash-basis.md  0011-mail-smtp-lettre-keychain.md  0012-doc-number-format.md  0013-local-first-no-telemetry.md  (+25 more)
src/: app.html
src-tauri/: .gitignore  .taurignore  Cargo.toml  about.hbs  about.toml  build.rs  tauri.conf.json
src-tauri/binaries/klein-buch-java-x86_64-pc-windows-msvc/: klein-buch-java.bat  versions.json
src-tauri/binaries/klein-buch-java-x86_64-pc-windows-msvc/runtime/: release
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_init.sql  0002_seller_tax_number_optional.sql  0003_invoices_seller_tax_number_optional.sql  0004_invoices_buyer_snapshot.sql  0005_quotes.sql  0006_legal_documents.sql  0007_expenses.sql  0008_private_movements.sql  0009_recurring.sql  0010_assets.sql  0011_depreciation.sql  0012_notifications.sql  0013_fiscal_year_locks.sql  0014_oauth.sql  0015_email_log.sql  0016_travel_cost.sql  0017_payment_on_invoice.sql  0018_payment_note.sql  0019_packages.sql  0020_package_item_provenance.sql  0021_package_item_title.sql  0022_contact_anonymization.sql  0023_quote_buyer_snapshot.sql  0024_recurring_invoices.sql  0025_recurring_invoice_item_position_unique.sql  0026_backup_log.sql  0027_backup_result_rule.sql  0028_append_only_hardening.sql  0029_drop_folder.sql  0030_rename_drop_folder_labels.sql
src-tauri/resources/handbook/: README.md  abo-rechnungen.md  afa-grundlagen.md  angebote.md  anlagen-und-afa.md  aufbewahrung-10-jahre.md  backup-pruefen.md  backup-und-wiederherstellen.md  backup-ziel-einrichten.md  disclaimer-kein-steuerberater.md  dsgvo-auskunft-und-anonymisierung.md  eingangsrechnungen-via-ordner.md  einstellungen.md  erste-rechnung-schreiben.md  euer-cash-basis.md  euer-export.md  euer.md  factory-reset.md  faq.md  geschaeftsjahr-abschluss.md  glossar.md  gobd-im-alltag.md  hinweise.md  kleinunternehmer-regelung.md  kontakte.md  konten-und-mail-versand.md  kosten-erfassen.md  kosten.md  pakete-und-anfahrt.md  passphrase-einrichten.md  pflichtangaben-rechnung.md  privatbewegungen.md  rechnungen.md  storno-statt-loeschung.md  third-party-licenses.html  troubleshooting-backup.md  troubleshooting-hash-mismatch.md  troubleshooting-oauth.md  troubleshooting-rechnungs-eingang.md  troubleshooting-restore.md  (+5 more)
src-tauri/resources/handbook/img/: .gitkeep
src-tauri/src/: branding.rs  config.rs  error.rs  lib.rs  main.rs
src-tauri/src/archive/: audit.rs  integrity_check.rs  mod.rs  store.rs
src-tauri/src/assets/: afa_tabellen.rs  mod.rs
src-tauri/src/backup/: encrypt.rs  factory_reset.rs  manifest.rs  mod.rs  restore.rs  rotation.rs  sftp.rs  snapshot.rs  target.rs
src-tauri/src/commands/: assets.rs  attachments.rs  backup.rs  contacts.rs  depreciation.rs  dsgvo.rs  euer.rs  expenses.rs  factory_reset.rs  fiscal_year.rs  invoices.rs  legal_documents.rs  mail.rs  migration_export.rs  mod.rs  notifications.rs  packages.rs  payment_accounts.rs  pdf.rs  private_movements.rs  quotes.rs  recurring.rs  recurring_invoice.rs  settings.rs  system.rs
src-tauri/src/db/: mod.rs  models.rs  numbering.rs  repo.rs  schema_version.rs  triggers.rs
src-tauri/src/db/repo/: app_settings.rs  assets.rs  attachments.rs  audit_log.rs  backup_log.rs  contacts.rs  depreciation.rs  dsgvo.rs  email_log.rs  euer.rs  expenses.rs  invoices.rs  legal_documents.rs  mail_accounts.rs  packages.rs  payment_accounts.rs  private_movements.rs  quotes.rs  recurring.rs  recurring_invoice.rs  seller_profile.rs
src-tauri/src/depreciation/: accrue_yearly.rs  compute.rs  mod.rs
src-tauri/src/domain/: anonymize.rs  asset.rs  contact.rs  depreciation.rs  drop_folder.rs  dsgvo.rs  expense.rs  factory_reset.rs  fiscal_year.rs  invoice.rs  kleinbetragsrechnung.rs  kleinunternehmer.rs  mod.rs  numbering.rs  package.rs  private_movement.rs  quote.rs  recurring.rs  recurring_invoice.rs  storno.rs  travel.rs
src-tauri/src/einvoice/: generator.rs  mod.rs  mustang_bridge.rs  parser.rs  types.rs  validator.rs
src-tauri/src/euer/: aggregate.rs  datev_csv.rs  detail.rs  elster_csv.rs  mod.rs  stb_package.rs
src-tauri/src/fiscal_year/: guard.rs  lock.rs  mod.rs  transition.rs
src-tauri/src/mail/: keyring.rs  mod.rs  oauth_ms.rs  smtp.rs  templates.rs
src-tauri/src/migration_export/: export.rs  json_dump.rs  mod.rs
src-tauri/src/notify/: mod.rs  os_native.rs  rules.rs  store.rs
src-tauri/src/pdf/: bundle.rs  klausel_check.rs  mod.rs  templates.rs  typst_render.rs
src-tauri/src/scheduler/: depreciation_year_close.rs  drop_folder.rs  integrity_check_cron.rs  mod.rs  recurring.rs  recurring_invoice.rs  reminders.rs  tick.rs
src-tauri/tests/: assets_repo_test.rs  backup_log_test.rs  backup_restore_test.rs  contact_anonymize_test.rs  contacts_repo_test.rs  drop_folder_sync_test.rs  dsgvo_export_test.rs  e2e_test.rs  einvoice_receive_test.rs  email_log_test.rs  euer_aggregation_test.rs  euer_elster_export_test.rs  expenses_repo_test.rs  fiscal_year_lock_test.rs  handbook_anchors_test.rs  handbook_footer_test.rs  handbook_resources_test.rs  happy_path_test.rs  inputs_seed_test.rs  invoice_lock_pipeline_test.rs  invoice_pipeline_test.rs  legal_documents_repo_test.rs  migration_0028_test.rs  oauth_ms_test.rs  package_catalog_test.rs  private_movements_repo_test.rs  quotes_repo_test.rs  r3_review_test.rs  r4_review_test.rs  r5_review_test.rs  receive_einvoice_xml_view_test.rs  recurring_repo_test.rs  seller_profile_test.rs
tests/: .gitkeep
(+116 files in other folders)
